# AndySDing_website

./: .gitignore  .htaccess  404.html  CRON_SETUP.md  README.md  REAL_MONEY.md  abyss-theme.css  analyze.php  auth.php  blog.php  briefing.php  broker.php  chat.js  chat.php  classic.html  comments.php  desk-briefing.js  desk-scorecard.js  desk-trade.js  desk.js  dev.html  hero-sonar.js  index.html  index.php  interactions.js  kymarion.html  lib_platform.php  likes.php  luminabone.html  playwright.config.ts  reveal.js  robots.txt  scorecard.php  script.js  sitemap.xml  stock-research.html  stocks.css  stocks.js  stocks.php  stocks.rt.js  (+8 more)
warrior-desk/: .env.example  .gitignore  README.md  config.example.yaml  conftest.py  live_account_acknowledgement.example.md  pyproject.toml
warrior-desk-v2/: .gitignore  CLAUDE.md  README.md  config.yaml  conftest.py  pyproject.toml  secrets.local.ps1.example
warrior-desk-v2/replay/: harness.py
warrior-desk-v2/scripts/: replay.py  run_premarket.py  run_session.py
warrior-desk-v2/src/: __init__.py  alerts.py  bus.py  config.py  dilution.py  engine.py  models.py  score.py
warrior-desk-v2/tests/: test_alpaca_wire.py  test_checkpoints_loop.py  test_config.py  test_encoding_discipline.py  test_engine_replay_score.py  test_execution.py  test_journal_reports.py  test_risk_properties.py  test_scanners.py  test_scrub.py  test_secrets.py  test_stale_clock.py  test_store_floats_news.py  test_strategies.py
warrior-desk/tests/: test_alerts.py  test_backtest.py  test_config.py  test_data.py  test_engine.py  test_execution.py  test_gauntlet.py  test_graduation.py  test_hardening.py  test_indicators.py  test_journal.py  test_kill.py  test_locks.py  test_patterns.py  test_position_manager.py  test_publish.py  test_reasoning.py  test_risk.py  test_sessions.py  test_sizing.py  test_state.py  test_yahoo.py
warrior-desk/warrior/: __init__.py  alerts.py  backtest.py  broker.py  catalysts.py  cli.py  config.py  demo.py  disclaimer.py  engine.py  execution.py  (+18 more)
(+75 files in other folders)
