[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "warrior-desk-v2"
version = "2.0.0"
description = "Momentum day-trading scanner + paper-execution agent (Warrior methodology). Educational; paper only."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "PyYAML>=6.0",
    "duckdb>=0.10",
    "alpaca-py>=0.21",
    "rich>=13.0",
    "yfinance>=0.2",   # keyless float source for cross-validation (§4.4); imported lazily
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "hypothesis>=6.90"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
